--- a/index.html
+++ b/index.html
@@ -5,95 +5,123 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Victor Raj Kumar - Resume</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Smooth fade animation */
+    .fade { animation: fadeIn 0.5s ease-in-out; }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-50 text-gray-900">
+
+  <!-- Main container -->
   <div class="max-w-4xl mx-auto p-6">
 
     <!-- Header -->
-    <div class="bg-white p-8 rounded-xl shadow-md">
-      <h1 class="text-4xl font-bold">Victor Raj Kumar</h1>
-      <p class="text-gray-700 mt-2">
-        Andhra Pradesh, India • +91 9676769257 • victorrajkumar7@gmail.com
+    <header class="bg-white p-8 rounded-2xl shadow fade">
+      <h1 class="text-4xl font-bold tracking-tight">Victor Raj Kumar</h1>
+      <p class="text-gray-600 mt-3 leading-relaxed">
+        Andhra Pradesh, India · +91 9676769257 · 
+        <a href="mailto:victorrajkumar7@gmail.com" class="text-blue-600 underline">
+          victorrajkumar7@gmail.com
+        </a>
       </p>
-    </div>
+    </header>
 
     <!-- Summary -->
-    <section class="bg-white p-8 rounded-xl shadow-md mt-6">
-      <h2 class="text-2xl font-semibold mb-3">Summary</h2>
-      <p>
-        Motivated and detail-oriented Data Science & Cybersecurity Enthusiast with a strong foundation in Python,
-        machine learning algorithms, and data analysis. Experienced in developing predictive models, performing
-        exploratory data analysis, and applying supervised and unsupervised learning techniques. Certified in
-        CompTIA Security+ with knowledge of core cybersecurity principles and practices. Adept at translating
-        complex data into actionable insights and eager to contribute to innovative projects in AI,
-        data-driven solutions, and cybersecurity.
+    <section class="bg-white p-8 rounded-2xl shadow mt-8 fade">
+      <h2 class="text-2xl font-semibold border-l-4 border-blue-600 pl-3">Summary</h2>
+      <p class="mt-3 leading-relaxed text-gray-700">
+        Motivated and detail-oriented Data Science & Cybersecurity Enthusiast with strong foundations in 
+        Python, machine learning algorithms, exploratory data analysis, and core security concepts. 
+        Certified in CompTIA Security+ and experienced in applying supervised & unsupervised learning 
+        techniques. Passionate about AI, analytics, secure systems, and solving complex technical problems.
       </p>
     </section>
 
     <!-- Experience -->
-    <section class="bg-white p-8 rounded-xl shadow-md mt-6">
-      <h2 class="text-2xl font-semibold mb-4">Experience</h2>
+    <section class="bg-white p-8 rounded-2xl shadow mt-8 fade">
+      <h2 class="text-2xl font-semibold border-l-4 border-blue-600 pl-3">Experience</h2>
 
-      <div class="mb-6">
+      <div class="mt-4">
         <h3 class="text-xl font-semibold">Cybersecurity Intern — Technical Hub</h3>
-        <p class="text-gray-600">Aug 2024 – Dec 2024</p>
-        <ul class="list-disc ml-6 mt-2">
-          <li>Assisted in threat analysis, risk management, and secure system design.</li>
-          <li>Conducted vulnerability assessments and incident response procedures.</li>
-          <li>Worked on cybersecurity operations including log analysis and threat hunting.</li>
+        <p class="text-gray-600 text-sm">Aug 2024 – Dec 2024</p>
+        <ul class="list-disc ml-6 mt-3 text-gray-700 leading-relaxed">
+          <li>Assisted with threat analysis, system hardening, and risk assessments.</li>
+          <li>Performed log analysis, vulnerability scanning, and incident response tasks.</li>
+          <li>Supported cybersecurity operations and documentation of findings.</li>
         </ul>
       </div>
     </section>
 
     <!-- Skills -->
-    <section class="bg-white p-8 rounded-xl shadow-md mt-6">
-      <h2 class="text-2xl font-semibold mb-4">Technical Skills</h2>
+    <section class="bg-white p-8 rounded-2xl shadow mt-8 fade">
+      <h2 class="text-2xl font-semibold border-l-4 border-blue-600 pl-3">Technical Skills</h2>
 
-      <h3 class="font-semibold">Programming & Tools</h3>
-      <p>Python, Git, Jupyter Notebook</p>
+      <div class="grid md:grid-cols-2 gap-6 mt-4">
 
-      <h3 class="font-semibold mt-4">Libraries & Frameworks</h3>
-      <p>Scikit-learn, TensorFlow, PyTorch, Pandas, NumPy, Matplotlib</p>
+        <div>
+          <h3 class="font-semibold text-lg">Programming & Tools</h3>
+          <p class="text-gray-700 mt-1">Python, Git, Jupyter Notebook</p>
+        </div>
 
-      <h3 class="font-semibold mt-4">Data Science Concepts</h3>
-      <p>
-        Data Cleaning, Feature Engineering, Model Evaluation, Supervised & Unsupervised Learning,
-        PCA, Regression, Clustering, Neural Networks, SQL (basic), Data Visualization, Exploratory Data Analysis
-      </p>
+        <div>
+          <h3 class="font-semibold text-lg">ML Libraries</h3>
+          <p class="text-gray-700 mt-1">Scikit-learn, TensorFlow, PyTorch, Pandas, NumPy</p>
+        </div>
+
+        <div>
+          <h3 class="font-semibold text-lg">Data Science Concepts</h3>
+          <p class="text-gray-700 mt-1">
+            EDA, Feature Engineering, Model Evaluation, Regression, Classification,
+            Clustering, PCA, Data Visualization
+          </p>
+        </div>
+
+        <div>
+          <h3 class="font-semibold text-lg">Other Skills</h3>
+          <p class="text-gray-700 mt-1">SQL (basic), Matplotlib, Security Fundamentals</p>
+        </div>
+      </div>
     </section>
 
     <!-- Projects -->
-    <section class="bg-white p-8 rounded-xl shadow-md mt-6">
-      <h2 class="text-2xl font-semibold mb-4">Projects</h2>
+    <section class="bg-white p-8 rounded-2xl shadow mt-8 fade">
+      <h2 class="text-2xl font-semibold border-l-4 border-blue-600 pl-3">Projects</h2>
 
-      <h3 class="font-semibold">Housing Price Prediction Model</h3>
-      <ul class="list-disc ml-6 mb-4">
-        <li>Developed regression model with 95% accuracy (R²) to predict housing prices.</li>
-        <li>Boosted performance by 15% using data cleaning, outlier detection, and feature engineering.</li>
-        <li>Deployed the model in a Flask web app for easy predictions.</li>
-        <li>Achieved strong RMSE and R² results.</li>
-      </ul>
+      <div class="mt-6">
+        <h3 class="text-lg font-semibold">🏡 Housing Price Prediction Model</h3>
+        <ul class="list-disc ml-6 mt-2 text-gray-700 leading-relaxed">
+          <li>Built a regression model achieving 95% accuracy (R² score).</li>
+          <li>Improved performance via outlier handling and feature engineering.</li>
+          <li>Developed visualizations and deployed using a Flask web interface.</li>
+        </ul>
+      </div>
 
-      <h3 class="font-semibold">Customer Segmentation using K-means</h3>
-      <ul class="list-disc ml-6">
-        <li>Used unsupervised learning to cluster customers on large-scale data.</li>
-        <li>Used PCA for dimensionality reduction.</li>
-        <li>Created visualizations in Matplotlib to support insights.</li>
-      </ul>
+      <div class="mt-6">
+        <h3 class="text-lg font-semibold">📊 Customer Segmentation (K-means)</h3>
+        <ul class="list-disc ml-6 mt-2 text-gray-700 leading-relaxed">
+          <li>Used K-means to segment customers for behavioral insights.</li>
+          <li>Performed PCA dimensionality reduction for faster clustering.</li>
+          <li>Generated charts for cluster analysis and insight presentation.</li>
+        </ul>
+      </div>
     </section>
 
     <!-- Education -->
-    <section class="bg-white p-8 rounded-xl shadow-md mt-6">
-      <h2 class="text-2xl font-semibold mb-3">Education</h2>
-      <p class="font-semibold">Bachelor of Technology, Information Technology</p>
-      <p>Aditya College of Engineering and Technology (2020–2024)</p>
+    <section class="bg-white p-8 rounded-2xl shadow mt-8 fade">
+      <h2 class="text-2xl font-semibold border-l-4 border-blue-600 pl-3">Education</h2>
+      <p class="font-semibold mt-4 text-lg">Bachelor of Technology — Information Technology</p>
+      <p class="text-gray-700">Aditya College of Engineering and Technology (2020–2024)</p>
     </section>
 
     <!-- Certifications -->
-    <section class="bg-white p-8 rounded-xl shadow-md mt-6 mb-12">
-      <h2 class="text-2xl font-semibold mb-3">Certifications</h2>
-      <p>CompTIA Security+ (2023)</p>
+    <section class="bg-white p-8 rounded-2xl shadow mt-8 mb-12 fade">
+      <h2 class="text-2xl font-semibold border-l-4 border-blue-600 pl-3">Certifications</h2>
+      <p class="mt-3 text-gray-700">CompTIA Security+ (2023)</p>
     </section>
 
   </div>
